--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -43,6 +43,10 @@
     src: url('/public/fonts/SpaceMono-Regular.ttf') format('truetype');
 }
 
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
 
 body{
     margin: 0;
